samples/_failures_safe/1761602583_ef2510_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ab2d085.c: In function ‘main’:
./samples/SAFE/__tmp_5ab2d085.c:160:12: error: missing terminating " character
  160 |     printf("\
      |            ^~
./samples/SAFE/__tmp_5ab2d085.c:160:5: error: expected expression at end of input
  160 |     printf("\
      |     ^~~~~~
./samples/SAFE/__tmp_5ab2d085.c:160:5: error: expected declaration or statement at end of input
